--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintVertical_bias="0.317" />
 
     <Button
         android:id="@+id/findGame"
@@ -24,19 +26,19 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="122dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/onlineBtn"
         app:layout_constraintVertical_bias="0.517"
         android:layout_marginLeft="96dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/onlineBtn"
         android:layout_width="167dp"
         android:layout_height="58dp"
+        android:layout_marginBottom="148dp"
+        android:layout_marginRight="-11dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="214dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/findGame" />
 
 </android.support.constraint.ConstraintLayout>
