--- a/app/src/main/res/layout/activity_remove_game.xml
+++ b/app/src/main/res/layout/activity_remove_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="wubbalubbadubdub.eecs448project1.ViewActivity">
+    tools:context="com.j_hawk.whattoplay.MainActivity">
 
 
     <TextView
