--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.j_hawk.whattoplay.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintVertical_bias="0.317" />
-
     <Button
-        android:id="@+id/findGame"
+        android:id="@+id/findGameTxt"
         android:layout_width="169dp"
         android:layout_height="53dp"
         android:text="Find Game"
@@ -27,18 +15,18 @@
         android:layout_marginTop="122dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/onlineBtn"
-        app:layout_constraintVertical_bias="0.517"
-        android:layout_marginLeft="96dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="98dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/onlineBtn"
         android:layout_width="167dp"
         android:layout_height="58dp"
-        android:layout_marginBottom="148dp"
-        android:layout_marginRight="-11dp"
+        android:layout_marginBottom="215dp"
+        android:layout_marginRight="4dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/findGame" />
+        app:layout_constraintRight_toRightOf="@+id/findGameTxt" />
 
 </android.support.constraint.ConstraintLayout>
