--- a/app/src/main/res/layout/api_search.xml
+++ b/app/src/main/res/layout/api_search.xml
@@ -14,15 +14,16 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Search"
-        app:layout_constraintLeft_toRightOf="@+id/findGame"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"
-        app:layout_constraintHorizontal_bias="0.652" />
+        android:onClick="searchButtonClicked"
+        android:text="Search"
+        app:layout_constraintHorizontal_bias="0.652"
+        app:layout_constraintLeft_toRightOf="@+id/findGameTxt"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/findGame"
+        android:id="@+id/findGameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -34,17 +35,28 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/listView" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/listView"
+        android:layout_marginTop="84dp"
+        android:layout_marginRight="142dp"
+        app:layout_constraintRight_toRightOf="@+id/listView" />
+
     <ListView
+        android:id="@+id/listView"
         android:layout_width="331dp"
         android:layout_height="418dp"
-        android:id="@+id/listView"
-        android:layout_marginRight="14dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchBtn"
-        app:layout_constraintVertical_bias="0.111"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="14dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.612"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBtn"
+        app:layout_constraintVertical_bias="0.111" />
 </android.support.constraint.ConstraintLayout>
