--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -30,7 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
+        app:itemBackground="@android:color/transparent"
+        app:itemIconTint="@color/bnv_colors"
+        app:itemTextColor="@color/bnv_colors"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
