--- a/app/src/main/res/layout/personalinfopage.xml
+++ b/app/src/main/res/layout/personalinfopage.xml
@@ -12,16 +12,39 @@
         app:srcCompat="@android:drawable/screen_background_dark_transparent" />
 
     <Button
-        android:id="@+id/checklist"
+        android:id="@+id/Findgame"
         android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:text="View My Games List" />
+        android:text="Find Games" />
 
     <Button
-        android:id="@+id/removemode"
+        android:id="@+id/mangecollection"
         android:layout_width="match_parent"
         android:layout_height="63dp"
-        android:text="delete Your Games"
-        android:layout_weight="0.01" />
+        android:layout_weight="0.01"
+        android:text="Manage My Collection" />
+
+    <Button
+        android:id="@+id/addgamebutton"
+        android:layout_width="416dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.14"
+        android:text="add games"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/removegamebutton"
+        android:layout_width="416dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.19"
+        android:text="remove games"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:visibility="invisible" />
 
 </LinearLayout>
