--- a/app/src/main/res/layout/remove_game_item.xml
+++ b/app/src/main/res/layout/remove_game_item.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#00000000"
@@ -22,29 +21,28 @@
         android:src="@android:drawable/ic_delete"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
+        app:srcCompat="@android:drawable/ic_delete"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/gameToRemove"
-        android:layout_width="186dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="88dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="88dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="28dp"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.331"
-        app:layout_constraintLeft_toLeftOf="@+id/deletebutton"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintLeft_toRightOf="@+id/deletebutton"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.571"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
