--- a/app/src/main/res/layout/import_collection.xml
+++ b/app/src/main/res/layout/import_collection.xml
@@ -15,12 +15,14 @@
             android:layout_height="62dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="32dp"
             android:text="Import Collection From BBG"
             app:layout_constraintLeft_toLeftOf="@+id/bggUserNameEdTxt"
             app:layout_constraintRight_toRightOf="@+id/bggUserNameEdTxt"
             app:layout_constraintTop_toBottomOf="@+id/bggUserNameEdTxt"
-            tools:layout_editor_absoluteX="19dp" />
+            app:layout_constraintHorizontal_bias="0.466"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <EditText
             android:id="@+id/bggUserNameEdTxt"
@@ -28,14 +30,59 @@
             android:layout_height="59dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="197dp"
+            android:layout_marginTop="131dp"
             android:hint="BoardGameGeek Username"
             android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="51dp"
-            tools:layout_editor_absoluteY="180dp" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="335dp"
+            android:layout_height="86dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/importButton"
+            app:layout_constraintRight_toRightOf="@+id/importButton"
+            app:layout_constraintHorizontal_bias="0.559"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/progressText"
+            android:layout_marginStart="8dp" />
+
+        <TextView
+            android:id="@+id/progressText"
+            android:layout_width="223dp"
+            android:layout_height="71dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            app:layout_constraintHorizontal_bias="0.511"
+            app:layout_constraintLeft_toLeftOf="@+id/importButton"
+            app:layout_constraintRight_toRightOf="@+id/importButton"
+            android:layout_marginTop="35dp"
+            app:layout_constraintTop_toBottomOf="@+id/importButton"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/cancelImport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="20dp"
+            android:text="Cancel Import"
+            app:layout_constraintLeft_toLeftOf="@+id/progressBar"
+            app:layout_constraintRight_toRightOf="@+id/progressBar"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
