--- a/app/src/main/res/layout/hotview_item.xml
+++ b/app/src/main/res/layout/hotview_item.xml
@@ -19,26 +19,26 @@
 
     <TextView
         android:id="@+id/hotListTitle"
-        android:layout_width="204dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="56dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="Titlebar"
         android:textSize="17dp"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toTopOf="@+id/hotListYear"
+        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintLeft_toLeftOf="@+id/hotListImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/hotListYear"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/hotListImage" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/hotListYear"
-        android:layout_width="126dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-21dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -46,7 +46,7 @@
         android:text="Year"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.644"
+        app:layout_constraintHorizontal_bias="0.311"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemTitle"
