--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,17 +5,16 @@
         <item>Name</item>
     </string-array>
     <string-array name="time">
-        <item>0 - 60 min</item>
-        <item>60 - 120 min</item>
-        <item>120+ min</item>
+        <item>0-60</item>
+        <item>60-120</item>
+        <item>120+</item>
     </string-array>
     <string-array name="age">
-        <item>Under 7</item>
-        <item>7 - 10</item>
-        <item>10 - 15</item>
-        <item>15 - 18</item>
-        <item>18 - 21</item>
-        <item>21+ </item>
+        <item>7</item>
+        <item>10</item>
+        <item>15</item>
+        <item>18</item>
+        <item>21</item>
     </string-array>
     <string-array name="number">
         <item>1</item>
@@ -37,6 +36,5 @@
         <item>17</item>
         <item>18</item>
         <item>19</item>
-        <item>20+</item>
     </string-array>
 </resources>
