--- a/app/src/main/res/layout/viewgameinfor.xml
+++ b/app/src/main/res/layout/viewgameinfor.xml
@@ -16,18 +16,52 @@
             android:layout_height="644dp"
             tools:layout_width="match_parent">
 
+            <View
+                android:layout_width="368dp"
+                android:layout_height="3dp"
+                android:background="@android:color/darker_gray"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:id="@+id/view"
+                app:layout_constraintTop_toBottomOf="@+id/searchedImage"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/scrollView3"
+                app:layout_constraintVertical_bias="0.19999999"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+
+            <View
+                android:layout_width="368dp"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:id="@+id/view2"
+                android:layout_marginTop="58dp"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/scrollView3"
+                app:layout_constraintVertical_bias="0.597"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.0" />
+
 
             <TextView
                 android:id="@+id/searchedName"
                 android:layout_width="378dp"
                 android:layout_height="34dp"
                 android:layout_marginLeft="11dp"
-                android:layout_marginTop="0dp"
                 android:text="Titlebar"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchedImage" />
+                app:layout_constraintTop_toBottomOf="@+id/searchedImage"
+                android:layout_marginStart="11dp" />
 
             <ImageView
                 android:id="@+id/searchedImage"
@@ -50,44 +84,53 @@
                 android:layout_width="58dp"
                 android:layout_height="22dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
                 android:text="Year"
                 android:textSize="18dp"
-                app:layout_constraintBottom_toTopOf="@+id/searchedDescription"
-                app:layout_constraintTop_toBottomOf="@+id/searchedName"
-                app:layout_constraintVertical_bias="0.0"
-                tools:layout_editor_absoluteX="16dp" />
+                app:layout_constraintBottom_toTopOf="@+id/searchedPlayTime"
+                android:layout_marginTop="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintVertical_bias="0.178"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.01" />
 
             <TextView
-                android:id="@+id/searchedPlayTime"
+                android:id="@+id/searchedNumOfPlayers"
                 android:layout_width="163dp"
                 android:layout_height="19dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="51dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="36dp"
                 android:text="TextView"
+                app:layout_constraintHorizontal_bias="0.039"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchedImage" />
+                app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <TextView
                 android:id="@+id/searchedAge"
                 android:layout_width="142dp"
                 android:layout_height="18dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginRight="214dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="15dp"
                 android:text="TextView"
-                app:layout_constraintHorizontal_bias="0.839"
-                app:layout_constraintLeft_toRightOf="@+id/searchedYear"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchedPlayTime" />
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/searchedPlayTime"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/searchedPlayTime"
+                app:layout_constraintVertical_bias="1.0" />
 
             <ScrollView
                 android:layout_width="388dp"
                 android:layout_height="225dp"
-                android:layout_marginBottom="0dp"
                 android:layout_marginRight="9dp"
                 android:layout_marginTop="8dp"
                 android:scrollbarStyle="insideOverlay"
@@ -95,9 +138,8 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/searchedImage"
                 app:layout_constraintVertical_bias="1.0"
-                tools:layout_editor_absoluteY="419dp"
-                tools:layout_editor_absoluteX="3dp"
-                android:id="@+id/scrollView3">
+                android:id="@+id/scrollView3"
+                android:layout_marginEnd="9dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -130,7 +172,22 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/searchedYear"
-                app:layout_constraintVertical_bias="0.987" />
+                app:layout_constraintVertical_bias="0.987"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:id="@+id/searchedPlayTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_marginBottom="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/view2"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.0" />
 
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
