--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,11 +5,13 @@
         <item>Name</item>
     </string-array>
     <string-array name="time">
+        <item>None</item>
         <item>0-60</item>
         <item>60-120</item>
         <item>120+</item>
     </string-array>
     <string-array name="age">
+        <item>None</item>
         <item>7</item>
         <item>10</item>
         <item>15</item>
@@ -17,6 +19,7 @@
         <item>21</item>
     </string-array>
     <string-array name="number">
+        <item>None</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
