--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -21,17 +21,14 @@
 
     <TextView
         android:id="@+id/itemTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="49dp"
         android:text="Titlebar"
         android:textSize="17dp"
         app:layout_constraintLeft_toRightOf="@+id/gamepic"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/atenddessnummin"
