--- a/app/src/main/res/layout/localsearching.xml
+++ b/app/src/main/res/layout/localsearching.xml
@@ -169,14 +169,20 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/start"
-        android:layout_width="166dp"
-        android:layout_height="51dp"
-        android:layout_marginLeft="109dp"
-        android:layout_marginTop="0dp"
-        android:text="Search"
+    <LinearLayout
+        android:layout_width="421dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="0dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView">
+
+        <Button
+            android:id="@+id/start"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:text="Search" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
