--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -16,8 +16,7 @@
         android:elevation="2dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:logo="@android:drawable/ic_menu_myplaces"
-        app:title="                    What to Play"
+        app:title="                          What to Play?"
         app:titleTextColor="@android:color/darker_gray" />
 
     <android.support.v4.view.ViewPager
